Use new linearizability checker for rethink